2010-12-30  Andy Buckley  <andy@insectnation.org>

	* Adding a run timeout option, and small bug-fixes to the event
	timeout handling, and making first event timeout work nicely with
	the run timeout. Run timeout is intended to be used in conjunction
	with timed batch token expiry, of the type that likes to make 0
	byte AIDA files on LCG when Grid proxies time out.

2010-12-21  Andy Buckley  <andy@insectnation.org>

	* Fix the cuts in the CDF 1994 colour coherence analysis.

2010-12-19  Andy Buckley  <andy@insectnation.org>

	* Fixing CDF midpoint cone jet algorithm default construction to
	have an overlap threshold of 0.5 rather than 0.75. This was
	recommended by the FastJet manual, and noticed while adding the
	ATLAS and CMS cones.

	* Adding ATLAS and CMS old iterative cones as "official" FastJets
	constructor options (they could always have been used by explicit
	instantiation and attachment of a Fastjet plugin object).

	* Removing defunct and unused ClosestJetShape projection.

2010-12-16  Andy Buckley  <andy@insectnation.org>

	* bin/compare-histos, pyext/lighthisto.py: Take ref paths from
	rivet module API rather than getting the environment by hand.

	* pyext/lighthisto.py: Only read .plot info from the first
	matching file (speed-up compare-histos).

2010-12-14  Andy Buckley  <andy@insectnation.org>

	* Augmenting the physics vector functionality to make FourMomentum
	support maths operators with the correct return type (FourMomentum
	rather than FourVector).

2010-12-11  Andy Buckley  <andy@insectnation.org>

	* Adding a --event-timeout option to control the event timeout,
	adding it to the completion script, and making sure that the init
	time check is turned OFF once successful!

	* Adding an 3600 second timeout for initialising an event file. If
	it takes longer than (or anywhere close to) this long, chances are
	that the event source is inactive for some reason (perhaps
	accidentally unspecified and stdin is not active, or the event